# notebooklm-knowledge-distillery

./: .gitignore  README.md  SKILL.md  pyproject.toml
scripts/: kd.py
